--- a/TicketsControl/tickets/templates/administracion/admin.html
+++ b/TicketsControl/tickets/templates/administracion/admin.html
@@ -41,12 +41,15 @@
                                         id="cola_select" name="cola_select" onchange="cola()">
                                         <option value="{{ record.colaAtencion }}" selected>{{ record.colaAtencion }}
                                         </option>
-                                        <option value="Registro">Registro</option>
+                                        <option value="Registro/Documentos">Registro/Documentos</option>
                                         <option value="Registro/Tesis">Registro/Tesis</option>
                                         <option value="Registro/Convalidacion">Registro/Convalidacion</option>
-                                        <option value="Registro/Retiro">Registro/Retiro-Congelar</option>
+                                        <option value="Registro/Retiros">Registro/Retiro-Congelar</option>
                                         <option value="Registro/Suficiencia">Registro/Suficiencias</option>
                                         <option value="Registro/Graduaciones">Registro/Graduaciones</option>
+                                        <option value="Registro/Taller">Registro/Taller</option>
+                                        <option value="Registro/Apelaciones">Registro/Apelaciones</option>
+                                        <option value="Registro/Retenciones">Registro/Retenciones</option>
                                         <option value="Admisiones">Admisiones</option>
                                         <option value="Cursos Libres">Cursos Libres</option>
                                         <option value="Cajas">Cajas</option>
