--- a/TicketsControl/tickets/templates/agentes/inicio_atencion.html
+++ b/TicketsControl/tickets/templates/agentes/inicio_atencion.html
@@ -32,12 +32,15 @@
                                     class="roundedInput form-select form-select-sm" aria-label=".form-select-sm example"
                                     id="cola_select" name="cola_select" onchange="cola()">
                                     <option value="{{ cola }}" selected>{{ cola }}</option>
+                                    <option value="Registro/Documentos">Registro/Documentos</option>
                                     <option value="Registro/Tesis">Registro/Tesis</option>
                                     <option value="Registro/Convalidacion">Registro/Convalidacion</option>
-                                    <option value="Registro/Retiro">Registro/Retiro-Congelar</option>
+                                    <option value="Registro/Retiros">Registro/Retiro-Congelar</option>
                                     <option value="Registro/Suficiencia">Registro/Suficiencias</option>
                                     <option value="Registro/Graduaciones">Registro/Graduaciones</option>
-                                    <option value="Registro">Registro</option>
+                                    <option value="Registro/Taller">Registro/Taller</option>
+                                    <option value="Registro/Apelaciones">Registro/Apelaciones</option>
+                                    <option value="Registro/Retenciones">Registro/Retenciones</option>
                                 </select>
                             </div>
                         </div>
@@ -286,7 +289,7 @@
             new QWebChannel(qt.webChannelTransport, function (channel) {
                 var resizeObj = channel.objects.resizeObj;
                 if (resizeObj) {
-                    resizeObj.restore_resize_window(500, 500);
+                    resizeObj.restore_resize_window(500, 580);
                 }
             });
         }
