--- a/TicketsControl/tickets/templates/componentes/navbarheader.html
+++ b/TicketsControl/tickets/templates/componentes/navbarheader.html
@@ -95,3 +95,55 @@
         });
     });
 </script>
+
+{% block modal_nuevoagente%}
+<div class="modal fade" id="modal_nuevoagente" tabindex="-1" aria-labelledby="modal_nuevoagenteTitle"
+    style="display: none" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content rounded-4">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal_nuevoagenteTitle">
+                    CREACION DE NUEVO AGENTE
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><span class="icon-close2"></span></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" action="{% url 'nuevo_agente' %}">
+                    {% csrf_token %}
+                    <div class="row ">
+                        <div class=" mb-3">
+                            <div class="mb-3">
+                                <input type="text" class="roundedInput form-control" id="floatingInput" placeholder="Nombre de Agente"
+                                    name="name" required>
+                            </div>
+
+                        </div>
+                        <div class="mb-3 ">
+                            <div class="mb-3">
+                                <select id="departamento" data-placeholder="Seleccione Departamento" class="roundedInput form-select" name="departamento"
+                                    required>
+                                    <option value="Admisiones">Admisiones</option>
+                                    <option value="Registro">Registro</option>
+                                    <option value="Cursos Libres">Cursos Libres</option>
+                                    <option value="Cajas">Cajas</option>
+                                </select>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="d-grid mb-2">
+                            <button type="submit" class="w-100 btn btn-lg btn-primary btn-login fw-bold"
+                                id="loading-indicator"> Registrar Agente</button>
+
+                            <div id="loading-indicator" class="hidden">
+                                <div class="spinner"></div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock modal_nuevoagente %}
