--- a/TicketsControl/tickets/templates/ticket/ticketmaker.html
+++ b/TicketsControl/tickets/templates/ticket/ticketmaker.html
@@ -2,16 +2,16 @@
 {% load static %}
 {% block content %}
 <div class="container">
-<div class="row mt-5">
+<div class="row mt-2">
     <div class="col-12 col-lg-12 col-md-12 col-sm-12 mx-auto mt-5 mb-5">
         <div class="card border-0 cardCol rounded-3 my-5 mx-auto">
             <div class="card-body pt-5 pl-8 pr-8">
-                <h1 class="card-title text-center mb-5 fw-light fs-8 fw-bold">DEPARTAMENTOS DE ATENCIÓN</h1>
-                <h3 class="card-title text-center mb-5 fw-light fs-3" style="color: #878787;">Seleccione el Departamento al que desea dirigirse</h3>
+                <h1 class="card-title text-center mb-3 titulo" >DEPARTAMENTOS DE ATENCIÓN</h1>
+                <h4 class="card-title text-center mb-4" style="color: #878787; font-weight: bold;">Seleccione el Departamento al que desea dirigirse</h4>
                 <main class="form-signin">
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <div class="form-floating">
+                            <div class="">
                                 <div>
                                     <button class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2"
                                     type="button" id="loading-indicator" onclick="crear_ticket_admision()"><p style="font-size: 30px;" class="mt-3 mb-3">Admisiones</p></button>
@@ -19,16 +19,16 @@
                             </div>
                         </div>
                         <div class="col-md-6 mb-3">
-                            <div class="form-floating">
+                            <div class="">
                                 <div>
                                     <button type="submit"
                                         class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2"
-                                        id="loading-indicator"  data-bs-toggle="modal"
+                                        id="registrobtn"  data-bs-toggle="modal"
                                         data-bs-target="#modal_registro"><p style="font-size: 30px;" class="mt-3 mb-3">Registro</p></button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-6 mb-3" style="display: none;">
                             <div class="form-floating">
                                 <div>
                                     <button class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2" disabled
@@ -36,11 +36,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <div class="form-floating">
+                        <div class="col-md-12 mb-3">
+                            <div class="form-floating d-flex justify-content-center">
                                 <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2"
-                                    type="button" id="loading-indicator" onclick="crear_ticket_cursolibre()"><p style="font-size: 30px;" class="mt-3 mb-3">Cursos Libres</p></button>
+                                    <button class="btnStyle btn btn-lg fw-bold pt-2 pb-2" type="button" id="loading-indicator" style="width: 360px;" onclick="crear_ticket_cursolibre()">
+                                        <p style="font-size: 30px;" class="mt-3 mb-3">Cursos Libres</p></button>
                                 </div>
                             </div>
                         </div>
@@ -60,65 +60,92 @@
 {% block modal_registro%}
 <div class="modal fade" id="modal_registro" tabindex="-1" aria-labelledby="modal_registroTitle" style="display: none"
     aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+    <div class="modal-dialog modal-dialog-centered custom-modal-xl" role="document">
         <div class="modal-content">
-            <div class="modal-header" style="justify-content: center;">
-                <div class="form-floating">
-                    <h1 class="modal-title" style="text-align: center;" id="modal_registroTitle">REGISTRO</h1>
-                    <p style="font-size: 25px; color: #878787;">Seleccione el trámite que desea realizar</p>
-                </div>
-            </div>
             <div class="modal-body">
                 <main class="form-signin">
                     <div class="row">
-                        <div class="col mb-3">
+                        <div class="form-floating" style="margin-bottom: 1px;">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <h1 class="modal-title" style="text-align: center; font-weight: 900;" id="modal_registroTitle">REGISTRO</h1>
+                            <p style="text-align: center; font-size: 25px; color: #878787; font-weight: bold;">Seleccione el trámite que desea realizar</p>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col">
                             <div class="form-floating">
                                 <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-4 pb-4"
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro()"><p style="font-size: 30px;" class="mt-3 mb-3">Registro</p></button>
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3"
+                                    type="button" id="loading-indicator" onclick="crear_ticket_registro()"><p style="font-size: 30px;" class="mt-3 mb-3">Documentos</p></button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col mb-3">
+                        <div class="col">
                             <div class="form-floating">
                                 <div>
                                     <button type="submit"
-                                        class="btnStyle w-100 btn btn-lg fw-bold pt-4 pb-4"
+                                        class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
                                         type="button" id="loading-indicator" onclick="crear_ticket_registro_tesis()"><p style="font-size: 30px;" class="mt-3 mb-3">Tesis</p></button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col mb-3">
+                        <div class="col">
                             <div class="form-floating">
                                 <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold"
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_retiros()"><p style="font-size: 30px;" class="mt-3 mb-3">Retiros y Congelamientos</p></button>
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-1 pb-1"
+                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_retiros()"><p style="font-size: 27px;" class="mt-3 mb-3">Retiros y Congelamientos</p></button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col mb-3">
+                    <div class="row mb-3">
+                        <div class="col">
                             <div class="form-floating">
                                 <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-4 pb-4"
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
                                     type="button" id="loading-indicator" onclick="crear_ticket_registro_suficiencia()"><p style="font-size: 30px;" class="mt-3 mb-3">Suficiencas</p></button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col mb-3">
+                        <div class="col">
                             <div class="form-floating">
                                 <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-4 pb-4"
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
                                     type="button" id="loading-indicator" onclick="crear_ticket_registro_convalidacion()"><p style="font-size: 30px;" class="mt-3 mb-3">Convalidaciones</p></button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col mb-3">
+                        <div class="col">
                             <div class="form-floating">
                                 <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-4 pb-4"
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
                                     type="button" id="loading-indicator" onclick="crear_ticket_registro_graduacion()"><p style="font-size: 30px;" class="mt-3 mb-3">Graduaciones</p></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col">
+                            <div class="form-floating">
+                                <div>
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
+                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_taller()"><p style="font-size: 30px;" class="mt-3 mb-3">Taller</p></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-floating">
+                                <div>
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
+                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_apelacion()"><p style="font-size: 30px;" class="mt-3 mb-3">Apelaciones</p></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-floating">
+                                <div>
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
+                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_retencion()"><p style="font-size: 30px;" class="mt-3 mb-3">Retenciones</p></button>
                                 </div>
                             </div>
                         </div>
@@ -134,6 +161,20 @@
 {% endblock modal_registro %}
 
 <style>
+    .modal-dialog.custom-modal-xl {
+        max-width: 95%; /* Puedes ajustar el porcentaje según tus necesidades */
+    }
+
+    .titulo{
+        font-weight: 900; 
+        font-size: 35px;
+    }
+
+    body{
+        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: hidden;
+    }
     .card-body{
         padding-left: 5rem;
         padding-right: 5rem;
@@ -150,7 +191,7 @@
         color: white;
         border-radius: 30px;
         border-color: #1D1D1B;
-        font-size: 25px;
+        font-size: 15px;
     }
     .btnStyle:hover {
         background-color: #1D1D1B;
@@ -164,9 +205,22 @@
         outline: none !important;
         box-shadow: none !important;
     }
+    
 </style>
 
 <script>
+    $(document).ready(function() {
+        var registro = document.getElementById("registrobtn");
+        // Escucha el evento "shown.bs.modal" para el modal de registro
+        $('#modal_registro').on('shown.bs.modal', function() {
+          // Espera 15 segundos y luego cierra el modal
+          setTimeout(function() {
+            $('#modal_registro').modal('hide');
+            registro.style.color = "white";
+          }, 15000);
+        });
+    });
+
     function crear_ticket_admision() {
         var url = "/crear-ticket-admision/";
         var request = new XMLHttpRequest();
@@ -273,6 +327,45 @@
 
     function crear_ticket_registro_graduacion() {
         var url = "/crear-ticket-registro-graduacion/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+
+    function crear_ticket_registro_taller() {
+        var url = "/crear-ticket-registro-taller/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+
+    function crear_ticket_registro_apelacion() {
+        var url = "/crear-ticket-registro-apelacion/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+
+    function crear_ticket_registro_retencion() {
+        var url = "/crear-ticket-registro-retencion/";
         var request = new XMLHttpRequest();
         request.open('GET', url, true);
         request.onload = function () {
