--- a/TicketsControl/tickets/templates/home.html
+++ b/TicketsControl/tickets/templates/home.html
@@ -41,6 +41,12 @@
             <div class="form-floating mb-3 ">
               <div class="mb-3">
                 <a class="w-100 btn btn-lg btn-primary btn-login fw-bold btnStyle" id="loading-indicator"
+                  href="{% url 'digital_ticket_maker' %}">INICIAR TICKETS DIGITAL</a>
+              </div>
+            </div>
+            <div class="form-floating mb-3 ">
+              <div class="mb-3">
+                <a class="w-100 btn btn-lg btn-primary btn-login fw-bold btnStyle" id="loading-indicator"
                   href="{% url 'ticket_maker' %}">INICIAR TICKETS</a>
               </div>
             </div>
