--- a/TicketsControl/tickets/templates/ticket/ticketmaker.html
+++ b/TicketsControl/tickets/templates/ticket/ticketmaker.html
@@ -93,7 +93,7 @@
                             <div class="form-floating">
                                 <div>
                                     <button class="btnStyle w-100 btn btn-lg fw-bold pt-1 pb-1"
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_retiros()"><p style="font-size: 27px;" class="mt-3 mb-3">Retiros y Congelamientos</p></button>
+                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_retiros()"><p style="font-size: 27px; margin-top: 30px; margin-bottom: 30px;">Retiros y Congelamientos</p></button>
                                 </div>
                             </div>
                         </div>
